Fixed errors and cleaned code. Added flag exceptions for France nad Netheralnds (so it loads proper flags). Fixed Map bug (very small on tablet-size screen)

--- a/src/components/CountriesTable/SortBy.scss
+++ b/src/components/CountriesTable/SortBy.scss
@@ -1,13 +1,17 @@
 @import '../../scss/variables';
 
 .sort-by {
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
-    gap: .5rem;
-    padding: .5rem 0;
-    list-style-type: none;
-    overflow: auto;
+    font-weight: 400;
+
+    &__list {
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
+        gap: .5rem;
+        padding: .5rem 0;
+        list-style-type: none;
+        overflow: auto;
+    }
 
     &__text {
         font-weight: 700;
