--- a/src/components/CountriesTable/SortOption.scss
+++ b/src/components/CountriesTable/SortOption.scss
@@ -21,7 +21,7 @@
         -webkit-font-smoothing: antialiased;
         font-family: "Font Awesome 5 Free";
         font-weight: 900; 
-        margin-left: .25rem;
+        margin-left: .5rem;
     }
 
     &.active.desc:after {
